force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
  <label>Property</label>
  <pluralLabel>Properties</pluralLabel>
  <nameField>
    <type>AutoNumber</type>
    <label>Property #</label>
    <displayFormat>PR-{00000}</displayFormat>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>