force-app/main/default/objects/Property__c/fields/Country__c.field-meta.xml
<CustomField>
  <fullName>Country__c</fullName>
  <label>Country</label>
  <length>80</length>
  <type>Text</type>
</CustomField>