force-app/main/default/objects/Property__c/fields/Host__c.field-meta.xml
<CustomField>
  <fullName>Host__c</fullName>
  <label>Host</label>
  <referenceTo>Account</referenceTo>
  <relationshipLabel>Properties</relationshipLabel>
  <relationshipName>Properties</relationshipName>
  <type>Lookup</type>
</CustomField>