force-app/main/default/objects/Property__c/fields/House_Rules__c.field-meta.xml
<CustomField>
  <fullName>House_Rules__c</fullName>
  <label>House Rules</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>