force-app/main/default/objects/Property__c/fields/Street__c.field-meta.xml
<CustomField>
  <fullName>Street__c</fullName>
  <label>Street</label>
  <length>255</length>
  <type>Text</type>
</CustomField>